--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,2 +1,13 @@
 body {
   background-color: #FFFFFF; }
+
+div {
+  border: 1px solid black; }
+
+#columns-wrapper {
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  width: 100%; }
+  #columns-wrapper .column-component {
+    width: 30%; }
