--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -6,7 +6,7 @@ div {
   border: 1px solid black;
 }
 
-#columns-wrapper {
+#app-container {
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
