--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,10 +4,12 @@ body {
 div {
   border: 1px solid black; }
 
-#app-container {
+#column-wrapper {
   display: flex;
-  flex-flow: row nowrap;
-  justify-content: center;
+  flex-flow: row wrap;
+  justify-content: space-around;
   width: 100%; }
-  #app-container .column-component {
-    width: 30%; }
+  #column-wrapper .column-component {
+    width: 300px; }
+    #column-wrapper .column-component .card-component {
+      margin: 20px; }
