--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -12,7 +12,42 @@ html {
 body {
   margin: 0;
   background-color: #FFFFFF;
-  font-family: sans-serif; }
+  font-family: sans-serif;
+  font-size: 20px; }
+
+#nav-bar {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: center;
+  width: 100%; }
+  #nav-bar .nav-content {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-flow: row nowrap;
+    justify-content: flex-start;
+    width: 45%; }
+    #nav-bar .nav-content .nav-item {
+      align-self: center;
+      font-weight: bold; }
+    #nav-bar .nav-content #brand {
+      font-size: 30px; }
+    #nav-bar .nav-content #new-card {
+      line-height: 36px;
+      font-size: 30px; }
+    #nav-bar .nav-content .options {
+      border: 1px solid black;
+      margin: 10px;
+      width: 40px;
+      height: 40px;
+      line-height: 37px;
+      text-align: center; }
 
 #column-wrapper {
   display: -webkit-box;
@@ -25,19 +60,21 @@ body {
   width: 100%; }
   #column-wrapper .column-component {
     width: 300px;
-    margin: 10px; }
+    margin: 5px;
+    border: 1px solid black; }
     #column-wrapper .column-component .sub-header {
-      margin: 20px 20px 0px 20px;
+      margin: 5px 10px 0px 10px;
       padding: 5px;
-      font-size: 20px;
       font-weight: bold; }
     #column-wrapper .column-component .card-wrapper {
-      margin: 0px 20px 20px 20px;
-      border: 1px solid black;
-      font-size: 20px; }
+      margin: 0px 10px 20px 10px;
+      border: 1px solid black; }
       #column-wrapper .column-component .card-wrapper .card-component {
         width: 300px; }
         #column-wrapper .column-component .card-wrapper .card-component div {
           padding: 5px; }
 
 /* SPECIAL SETTINGS  */
+#nav-spacer {
+  visibility: hidden;
+  flex-grow: 1; }
